@@ -4,6 +4,7 @@ EXTRA_DIST =			\
 	loudmouth-1.0.pc.in     \
         loudmouth.spec          \
 	loudmouth.spec.in       \
+	CONTRIBUTORS            \
 	README.WIN32
 
 pkgconfigdir = $(libdir)/pkgconfig
